added chat feature

--- a/src/View/Home/styles.css
+++ b/src/View/Home/styles.css
@@ -3,13 +3,13 @@
 }
 
 .content {
-    position: absolute;
-    bottom: 0;
 
-    width: 75%;
+    height: 43vmax;
+
+    width: 80%;
     margin-bottom: 20px;
 
-    margin-left: 30%;
+
 
 
 
