--- a/src/Components/Cells/Navbar/styles.css
+++ b/src/Components/Cells/Navbar/styles.css
@@ -1,15 +1,16 @@
-.img {
+.profilepic {
     background-color: #ddddf7;
     height: 30px;
     width: 30px;
     border-radius: 50%;
     object-fit: cover;
+    margin: 10px;
   }
   .navbar {
     display: flex;
     align-items: center;
     background-color: #82458b;
-    height: 30px;
+    height: 40px;
     padding: 10px;
     justify-content: space-between;
     color: #ddddf7;
@@ -20,7 +21,7 @@
     .user {
       display: flex;
       gap: 10px;
- 
+     
       width: 100%;
     }
    
@@ -30,7 +31,8 @@
         font-size: 10px;
         border: none;
         cursor: pointer;
-        margin-left: 100px;
+        margin-top: 10px;
+        margin-bottom: 10px;
         border-radius: 5px;
         border:solid;
         border-color: #ddddf7;
@@ -38,8 +40,14 @@
 
      
       }
-    .name{
-        margin-top: 5px;
+    .profilename{
+        margin-top: 15px;
+        font-size: large;
+        margin-left:5px ;
         
 
+    }
+    .pname{
+      display: flex;
+      width:60%
     }
