--- a/src/View/Sidebar/styles.css
+++ b/src/View/Sidebar/styles.css
@@ -1,8 +1,9 @@
 .sidebar{
     border-right: solid;
     border-width: thin;
-    width:22%;
+    width:20%;
     height:45vmax;
     background-color:#581a59;
+    overflow-y: scroll;
 
 }
