--- a/src/Components/Cells/Messages/styles.css
+++ b/src/Components/Cells/Messages/styles.css
@@ -5,4 +5,6 @@
     height: calc(100% - 160px);
     overflow-y: scroll;
  
-}
+}.messages::-webkit-scrollbar {
+    width: 5px;               /* width of the entire scrollbar */
+  }
