--- a/src/Components/Cells/Navbar/styles.css
+++ b/src/Components/Cells/Navbar/styles.css
@@ -26,7 +26,7 @@
     }
    
       .button {
-        background-color: #581a59;
+        background-color: #362443;
         color: #ddddf7;
         font-size: 10px;
         border: none;
