--- a/src/Components/Cells/Inputs/styles.css
+++ b/src/Components/Cells/Inputs/styles.css
@@ -1,7 +1,7 @@
 .inputdata {
     height: 50px;
     background-color: white;
-
+margin-top: 40px;
     padding: 10px;
     display: flex;
     align-items: center;
