--- a/src/Components/Cells/Chat/styles.css
+++ b/src/Components/Cells/Chat/styles.css
@@ -1,10 +1,14 @@
 .chat {
     flex: 2;
-    height: 100%;
+    height: 43vmax;
     
 }
+.mess{
+  flex: 2;
+  height: 33vmax;
+}
     .chatInfo {
-      height: 40px;
+      height: 50px;
       background-color: #362443;
       display: flex;
       align-items: center;
@@ -40,7 +44,7 @@
       .directMessage{
         font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         color: antiquewhite;
-        margin:50px;
+        margin:20px;
         text-align: center;
       }
       .divDirect{
@@ -51,9 +55,8 @@
         flex-direction: column;
         gap: 10px;
         align-items: center;
-         margin-top: 180px;
-         margin-left: 28%;
-         margin-right: 20%;
+         margin-top: 180px; 
+          margin-left: 410px;
          height:200px;
          width:400px
      
