--- a/src/Components/Cells/Chat/styles.css
+++ b/src/Components/Cells/Chat/styles.css
@@ -61,3 +61,18 @@
          width:400px
      
       }
+      .name {
+        font-size: 18px;
+        font-weight: 500;
+      }
+      .userData {
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: black;
+        cursor: pointer;
+    
+    
+        }
+    
