--- a/src/Components/Cells/Inputs/styles.css
+++ b/src/Components/Cells/Inputs/styles.css
@@ -1,28 +1,35 @@
 .inputdata {
-    height: 50px;
+    height: 60px;
     background-color: white;
-margin-top: 40px;
+margin-top: 25px;
+margin-left: 25px;
     padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom-style: groove;
+    background-color: #f0dbf1;
+    width: 90%;
+    border-radius: 10px;
 }
 
 .messageinput {
     height:60px;
     width:80%;
+    /* border: 0px solid; */
  border:none;
-    border-bottom-style: groove;
-    background-color: #f0dbf1;
-    
+    background: transparent;
     border-radius: 10px;
 }
-
+*:focus {
+    outline: none;
+}
 
 .send {
     display: flex;
     align-items: center;
     gap: 10px;
+   
 }
 
 .messimage {
@@ -36,4 +43,5 @@ margin-top: 40px;
     color: white;
     background-color: #8da4f1;
     cursor: pointer;
+    border-radius: 10px;
 }
