--- a/src/Components/Cells/Message/styles.css
+++ b/src/Components/Cells/Message/styles.css
@@ -48,4 +48,16 @@ flex-direction: row-reverse;
     width: 100px;
     height: 120px;
     border-radius: 0px ;
+    margin: 20px;
+}
+
+.pdf{
+  width:100px;
+  border-radius: 0px;
+  height:100px;
+   margin:20px
+
+}
+.fileName{
+  font-size: 11px;
 }
