--- a/src/Components/Atoms/MessageList/styles.css
+++ b/src/Components/Atoms/MessageList/styles.css
@@ -30,18 +30,27 @@ flex-direction: row-reverse;
         }
       
       .messageContent {
-        max-width: 80%;
+        max-width: 600px;
         display: flex;
         flex-direction: column;
         gap: 10px;
+        /* display:inline-block */
       }
         .messgtext{
+          width:100px;
           background-color: white;
           padding: 10px 20px;
+          max-width: 100px;
           border-radius: 0px 10px 10px 10px;
-          max-width: max-content;
+          /* display:inline-block; */
           margin: 15px;
+          
+          
         }
+       .messgtext::-webkit-scrollbar {
+          width: 5px;               /* width of the entire scrollbar */
+        }
+        
 
     
 .chatimg{
