--- a/src/Components/Atoms/MessageList/styles.css
+++ b/src/Components/Atoms/MessageList/styles.css
@@ -1,72 +1,91 @@
- 
-  .messageowner{
- padding: 20px;
-display: flex;
-flex-direction: row-reverse;
-  }
-  .messagefalse{
-    padding: 20px;
+ .messageowner {
+   padding: 20px;
+   display: flex;
+   /* flex-direction: row-reverse; */
+   /* border-bottom: solid; */
+ }
+
+ .messagefalse {
+   padding: 20px;
    display: flex;
 
-     }
-   
+ }
 
-    .message {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 20px;
-    }
-      .messageInfo {
-        display: flex;
-        flex-direction: column;
-        color: gray;
-        font-weight: 300;
-      }
-      .senderimg{
-          width: 40px;
-          height: 40px;
-         
-          object-fit: cover;
-        }
-      
-      .messageContent {
-        max-width: 600px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        /* display:inline-block */
-      }
-        .messgtext{
-          width:100px;
-          background-color: white;
-          padding: 10px 20px;
-          max-width: 100px;
-          border-radius: 0px 10px 10px 10px;
-          /* display:inline-block; */
-          margin: 15px;
-          
-          
-        }
-       .messgtext::-webkit-scrollbar {
-          width: 5px;               /* width of the entire scrollbar */
-        }
-        
 
-    
-.chatimg{
-    width: 100px;
-    height: 120px;
-    border-radius: 0px ;
-    margin: 20px;
-}
+ .message {
+   display: flex;
+   gap: 20px;
+   margin-bottom: 20px;
+ }
 
-.pdf{
-  width:100px;
-  border-radius: 0px;
-  height:100px;
-   margin:20px
+ .messageInfo {
+   display: flex;
+   /* flex-direction: column; */
+   color: gray;
+   font-weight: 300;
+ }
 
-}
-.fileName{
-  font-size: 11px;
-}
+ .senderimg {
+   width: 40px;
+   height: 40px;
+   border-radius: 4px;
+   object-fit: cover;
+   margin-top: 5px;
+ }
+
+ .messageContent {
+   max-width: 600px;
+   display: flex;
+   flex-direction: column;
+
+
+ }
+
+ .messgtext {
+  color:black;
+   background-color: white;
+margin-left: 10px;
+   max-width: 500px;
+   border-radius: 0px 10px 10px 10px;
+   /* display:inline-block; */
+   font-size: small;
+   word-wrap: break-word;
+
+ }
+
+ .messgtext::-webkit-scrollbar {
+   width: 5px;
+   /* width of the entire scrollbar */
+ }
+
+
+
+ .chatimg {
+   width: 100px;
+   height: 120px;
+   border-radius: 0px;
+   margin: 20px;
+ }
+
+ .pdf {
+   width: 100px;
+   border-radius: 0px;
+   height: 100px;
+   margin: 20px
+ }
+
+ .fileName {
+   font-size: 11px;
+ }
+ .senderName{
+  color:black;
+  margin-left: 10px;
+  font-weight: 500;
+  font-size: large;
+ }
+ .atTime{
+  color:black;
+  margin-left: 10px;
+  font-weight: 500;
+  font-size: 15px;
+ }
