--- a/src/Components/Cells/Header/styles.css
+++ b/src/Components/Cells/Header/styles.css
@@ -4,12 +4,21 @@
     border-width: thin;
     background-color:#581a59;
     width: 100%;
+    height: 42px;
     text-align: center;
+    display: flex;
 }
 .Heading{
     color: aliceblue;
-    font-size: xx-large;
+    font-size: 20px;
   font-weight: 600;
-  padding: 5px;
+  padding: 6px;
+
+}
+.Nav{
+  position: absolute;
+  right:0;
+  margin-right: 20px;
+ 
 
 }
