--- a/src/Components/Cells/Inputs/styles.css
+++ b/src/Components/Cells/Inputs/styles.css
@@ -1,15 +1,18 @@
 .inputdata {
-    height: 60px;
+    height: 100px;
     background-color: white;
-margin-top: 25px;
+ 
 margin-left: 25px;
-    padding: 10px;
+   
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom-style: groove;
+    border:solid;
+    /* border-style: groove; */
+    border-width: thin;
+    border-color: grey;
    
-    width: 90%;
+    width: 93%;
     border-radius: 10px;
 }
 
@@ -35,16 +38,29 @@ margin-left: 25px;
 .messimage {
     height: 24px;
     cursor: pointer;
+    margin-right: 10px;
 }
 
 .sendbutton {
     border: none;
-    padding: 10px 15px;
-    color: white;
-    background-color: #8da4f1;
+    /* padding: 10px 15px; */
+
+   height:50px;
+   width:50px;
     cursor: pointer;
     border-radius: 10px;
+    margin-right: 10px;
 }
 .inputText{
-    width:800px
+    width:900px;
+
+}
+
+.react-input-emoji--input{
+        max-height: 62px;
+}
+.react-emoji-picker--wrapper{
+    border: solid;
+    border-width: thin;
+    border-radius: 5px;
 }
