--- a/src/Components/Cells/SearchingUser/styles.css
+++ b/src/Components/Cells/SearchingUser/styles.css
@@ -13,11 +13,25 @@
 .usersDisplay{
   display: flex;
   flex-direction: column;
-  height: 100px;
+  height: 120px;
   overflow-y: scroll;
 }
+.SelectedList{
+  display: flex;
 
+  justify-content: space-between;
+ padding:10px
+}
 .userData{
+  display: flex;
+
+
+}
+
+.userData:hover{
+ background-color: rgb(151, 147, 151);
+ color: white;
+ border-radius:10px;
 
 }
 .userImage{
@@ -26,4 +40,15 @@
 
 .userName{
 
+}
+
+.deleteBtnnn:hover{
+ border-radius: 0px;
+ height:40px;
+ width:40px;
+ background-color: rgb(236, 173, 173);
+}
+.selectedUsers:hover{
+  border-radius:10px;
+ 
 }
