--- a/src/Components/Cells/ChatList/styles.css
+++ b/src/Components/Cells/ChatList/styles.css
@@ -9,12 +9,13 @@
       width: 5px;               /* width of the entire scrollbar */
     }
 .userChat {
-    padding: 10px;
+    padding: 5px;
     display: flex;
     align-items: center;
     gap: 10px;
     color: white;
     cursor: pointer;
+
 
 }
 
@@ -37,4 +38,11 @@
         color: aliceblue;
         margin: 20px;
         font-size: larger;
+    }
+
+    .userChat:hover{
+      background-color: #82458b
+    }
+    .userChatInfo{
+      width: 65%;
     }
