--- a/src/Components/Cells/ChatSection/styles.css
+++ b/src/Components/Cells/ChatSection/styles.css
@@ -9,6 +9,7 @@
 .mess{
   flex: 2;
   height: 33vmax;
+  width:127%;
 }
     .chatInfo {
       height: 40px;
@@ -21,7 +22,7 @@
       border-bottom: solid;
       border-color: lightgray;
       border-width: thin;
-      width:1089px;
+      width:100%;
     }
 
     .chatIcons {
