--- a/src/Components/Cells/Inputs/styles.css
+++ b/src/Components/Cells/Inputs/styles.css
@@ -64,3 +64,13 @@ margin-left: 25px;
     border-width: thin;
     border-radius: 5px;
 }
+.uploadImg{
+    margin-left:50px;
+    height:300px;
+    width:300px;
+    border-radius:0px;
+}
+.uploadedImage{
+    display:flex;
+    flex-direction: column;
+}
