--- a/src/View/Login/styles.css
+++ b/src/View/Login/styles.css
@@ -71,3 +71,11 @@
   .loginError{
     color:red
   }
+  .Verification{
+    background-color: #f9ac08;
+    color: white;
+    padding: 10px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+  }
