--- a/src/Components/Atoms/MessageList/styles.css
+++ b/src/Components/Atoms/MessageList/styles.css
@@ -103,3 +103,22 @@ margin-left: 10px;
   font-weight: 500;
   font-size: small;
  }
+
+ .seenStatus{
+  background-color: green;
+  height: 10px;
+  width: 10px;
+  border-radius: 10px;
+  margin: 10px;
+ }
+
+ .unseenStatus{
+  background-color: red;
+  height: 10px;
+  width: 10px;
+  border-radius: 10px;
+  margin: 10px;
+ }
+ .userDetails{
+  display: flex;
+ }
