--- a/src/Components/Atoms/ChannelOrUserDetails/styles.css
+++ b/src/Components/Atoms/ChannelOrUserDetails/styles.css
@@ -31,6 +31,11 @@
 }
 
 .closeDetails {
+    height: 30px;
+    width: 30px;
+    border-radius: 10px;
+    margin: 10px;
+    object-fit: contain;
     margin: 10px;
     padding: 5px;
     cursor:pointer
@@ -48,7 +53,10 @@
 
 .deleteIcon {
     background-color: white;
-
+    height: 30px;
+    width:30px;
+    border-radius: 50%;
+    object-fit: content;
 
 }
 
