--- a/src/Components/Cells/Header/styles.css
+++ b/src/Components/Cells/Header/styles.css
@@ -4,7 +4,7 @@
     border-width: thin;
     background-color:#581a59;
     width: 100%;
-    height: 42px;
+    height: 7vh;
     text-align: center;
     display: flex;
 }
