--- a/src/View/Home/styles.css
+++ b/src/View/Home/styles.css
@@ -1,7 +1,13 @@
 .main {
     display: flex;
-    width:100%
+    width:100%;
+    height:93vh
 }
 .content{
-    width:80%
+    width:80%;
+    height:93vh
+}
+.sideDiv{
+    width: 20%;
+    background-color:#581a59;;
 }
