--- a/src/View/Sidebar/styles.css
+++ b/src/View/Sidebar/styles.css
@@ -1,8 +1,8 @@
 .sidebar{
     border-right: solid;
     border-width: thin;
-    width:20%;
-    height:43.4vmax;
+    width:100%;
+    height:100%;
     background-color:#581a59;
 }
 .directMessageShow{
@@ -15,16 +15,20 @@
     border-bottom: solid;
     border-width: thin;
     border-color:lightgray;
-  
+    display: flex;
     height:40px;
 }
 .close{
-    height: 20px;
-    width:20px;
+
+    height: 40%;
+    width:10%;
     border: solid;
     border-width: thin;
     border-color: white;
-    padding: 3px;
+    padding: 1px;
     cursor: pointer;
-
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 10px;
+  
 }
