--- a/src/Components/Atoms/Display/styles.css
+++ b/src/Components/Atoms/Display/styles.css
@@ -6,7 +6,7 @@
     top:0;
     left:0;
   width: 40%; /* Full width */
-  height: 70%; /* Full height */
+  height: fit-content; /* Full height */
   background-color: #fefefe;
   margin-top:0%; /* 15% from the top and centered */
   margin-left:30%;
