--- a/src/Components/Cells/ChatList/styles.css
+++ b/src/Components/Cells/ChatList/styles.css
@@ -67,10 +67,13 @@
     }
     .unseenCount{
       background-color: red;
-      height:18px;
-      width:20px;
+      height:fit-content;
+      width:fit-content;
       border-radius: 10px;
-      padding-left: 4.5px;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
+      margin: 2.5%;
+      color:white
 
       /* color:red; */
 
