--- a/src/View/Login/styles.css
+++ b/src/View/Login/styles.css
@@ -14,19 +14,20 @@
     flex-direction: column;
     gap: 10px;
     align-items: center;
+    width:28%
 }
 .form{
     display: flex;
     flex-direction: column; 
 }
 .logo {
-    color: #5d5b8d;
+    color: #0c4fd5;
     font-weight: bold;
     font-size: 24px;
 
   }
   .title {
-    color: #5d5b8d;
+    color: #0c4fd5;
     font-size: 12px;
   }
   .form {
@@ -39,26 +40,38 @@
       padding: 15px;
       border: none;
       width: 250px;
-      border-bottom: 1px solid #a7bcff;
+      border-bottom: 1px solid #0c4fd5;;
      
       }
+      
 .Signin {
-    background-color: #7b96ec;
-    color: white;
-    padding: 10px;
-    font-weight: bold;
-    border: none;
-    cursor: pointer;
+  border-radius: 10px;
+  background-color: #0c4fd5;
+  color: white;
+  padding: 10px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  }
+  .Signin:hover{
+    background-color: #0c214a;
   }
   .span {
     display: flex;
     align-items: center;
     gap: 10px;
-    color: #8da4f1;
+    color: #0c4fd5;
     font-size: 12px;
     cursor: pointer;
 
 }
+
+
+.Link:hover{
+  color: #093ba0;
+  font-weight: 500;
+}
+
 .img {
   width: 32px;
 }
@@ -69,7 +82,9 @@
     margin-top: 10px;
   }
   .loginError{
-    color:red
+    color:red;
+
+    word-wrap: break-word;
   }
   .Verification{
     background-color: #f9ac08;
@@ -87,5 +102,15 @@
     padding: 15px;
     border: none;
     width: 230px;
-    border-bottom: 1px solid #a7bcff;
+    border-bottom: 1px solid #0c4fd5;
+  }
+
+  .resetBtn{
+    background-color: #f8ab04;
+    color: white;
+    padding: 10px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
   }
