--- a/src/Components/Atoms/passwordView/styles.css
+++ b/src/Components/Atoms/passwordView/styles.css
@@ -2,9 +2,15 @@
     height:20px;
     width:20px;
     margin-top: 20px;
+    cursor: pointer;
 }
 .passwordClose{
     height:15px;
     width:20px;
     margin-top: 22px;
+    cursor: pointer;
+
+}
+.passWordViewButton{
+    border-bottom: 1px solid #0c4fd5;
 }
