--- a/src/View/Register/styles.css
+++ b/src/View/Register/styles.css
@@ -61,7 +61,7 @@
   color: #093ba0;
   font-weight: 500;
 }
-  .label {
+  .avatarLabel {
     display: flex;
     align-items: center;
     gap: 10px;
