--- a/src/Components/Atoms/passwordView/styles.css
+++ b/src/Components/Atoms/passwordView/styles.css
@@ -1,15 +1,16 @@
 .passwordShow{
-    height:20px;
-    width:20px;
-    margin-top: 20px;
+    height:22px;
+    width:22px;
+    margin-top: 17px;
     cursor: pointer;
 }
 .passwordClose{
-    height:15px;
-    width:20px;
-    margin-top: 22px;
+    height:16px;
+    width:16px;
+    margin-top: 20px;
+    margin-left: 2px;
     cursor: pointer;
-
+    object-fit: contain;
 }
 .passWordViewButton{
     border-bottom: 1px solid #0c4fd5;
