--- a/src/View/Login/styles.css
+++ b/src/View/Login/styles.css
@@ -39,7 +39,7 @@
    .input {
       padding: 15px;
       border: none;
-      width: 250px;
+      width: 100%;
       border-bottom: 1px solid #0c4fd5;;
      
       }
@@ -101,7 +101,7 @@
   .passwordInputLogin{
     padding: 15px;
     border: none;
-    width: 230px;
+    width: 100%;
     border-bottom: 1px solid #0c4fd5;
   }
 
