--- a/src/Components/Cells/ChannelList/styles.css
+++ b/src/Components/Cells/ChannelList/styles.css
@@ -8,7 +8,9 @@
 }.channels::-webkit-scrollbar {
         width: 0px;               /* width of the entire scrollbar */
       }
-
+.channelsDiv:hover{
+  background-color: #b58abc;
+}
   .channelInfo{
     font-size: 100%;
     margin-top:5%
@@ -67,4 +69,17 @@
       word-wrap: break-word;
       overflow: hidden;
       
+    }
+    .channelsDiv {
+      padding: 5px;
+      display: flex;
+      align-items: center;
+      gap: 10%;
+      color: white;
+      cursor: pointer;
+      width: 100%;
+      height: 20%;
+    
+    
+    
     }
