--- a/src/Components/Cells/Messages/styles.css
+++ b/src/Components/Cells/Messages/styles.css
@@ -1,16 +1,16 @@
-
 .messages {
-    
-
-   margin-top: 10px;    
-    padding: 10px;
-    height: 65%;
-    overflow-y: scroll;
-    margin-bottom: 20px;    
-  
- 
-}.messages::-webkit-scrollbar {
-    width: 5px;               /* width of the entire scrollbar */
-  }
 
 
+  margin-top: 10px;
+  padding: 10px;
+  height: 65%;
+  overflow-y: scroll;
+  margin-bottom: 20px;
+
+
+}
+
+.messages::-webkit-scrollbar {
+  width: 5px;
+  /* width of the entire scrollbar */
+}
